--- a/misc/server/sbmt/dart/layouts/default.html
+++ b/misc/server/sbmt/dart/layouts/default.html
@@ -10,7 +10,7 @@
 <body>
     <div id="wrapper">
         <div id="header">
-          <h1><a href="index.html"><img src="resources/logo.png" alt="" width=169 height=80></a>Small Body Mapping Tool (OREX Version)</h1>
+          <h1><a href="index.html"><img src="resources/logo.png" alt="" width=169 height=80></a>Small Body Mapping Tool (DART Version)</h1>
         </div>
         <div id="leftcolumn">
           <ul>
