Linked references page to index page

--- a/misc/server/sbmt/megane/layouts/default.html
+++ b/misc/server/sbmt/megane/layouts/default.html
@@ -15,19 +15,11 @@
         <div id="leftcolumn">
           <ul>
             <li><a href="index.html">Home</a></li>
-         <!--   <li><a href="installation.html">Installation</a></li>  -->
             <li><a href="http://sbmt.jhuapl.edu/index.php#help">User Help</a></li>
-           <!--  <li>User Help<ul class="userhelp">
-            <li><a href="http://sbmt2.jhuapl.edu/index.php#documentation">User Manual</a></li>
-            <li><a href="http://sbmt2.jhuapl.edu/How-To-Tutorials.php">Tutorial</a></li>
-            <li><a href="japanese_instruction_sbmt_apl.pdf">How to add your own image</a></li>
-            </ul></li>
-            -->
+            <li><a href="references.html">References</a></li>
             <li><a href="releasenotes.html">Release Notes</a></li>
             <li><a href="http://sbmt.jhuapl.edu/index.php#contact-us">Contact</a></li>
             <li><a href="releases">Previous Releases</a></li>
-       <!--     <li><a href="sbmt/data">Data</a></li> -->
-       <!--     <li><a href="galleries.html">Image Galleries</a></li> -->
           </ul>
         </div>
         <div id="content">
